option(
    'target_tests', 
    type: 'boolean', 
    value: true, 
    description: 'Switch to enable/disable building and running of tests for the target'
)
option(
    'target_executable',
    type: 'boolean',
    value: true,
    description: 'Switch to enable/disable building and running of tests for the target'
)